Ajout d'une image et modifications du carrousel et des autres pages html.

--- a/src/contact.html
+++ b/src/contact.html
@@ -110,10 +110,15 @@
       <section class="references">
         <div class="wrapper">
           <div class="buttons">
-            <a href="" class="button"
+            <a href="pdf/alanisbedard_cv.pdf" class="button" download
+              >Télécharger mon CV</a
+            >
+            <a
+              href="pdf/alanisbedard_recommandation.pdf"
+              class="button"
+              download
               >Télécharger ma lettre de recommendation</a
             >
-            <a href="" class="button">Télécharger mon CV</a>
           </div>
         </div>
       </section>
