--- a/src/projects.html
+++ b/src/projects.html
@@ -44,30 +44,38 @@
           </nav>
         </div>
       </header>
-
-      <section class="hero">
-        <div class="wrapper">
-          <!-- Slider main container -->
-          <div class="swiper swiper-container" data-component="Carousel">
-            <!-- Additional required wrapper -->
-            <div class="swiper-wrapper">
-              <!-- Slides -->
-              <div class="swiper-slide">Slide 1</div>
-              <div class="swiper-slide">Slide 2</div>
-              <div class="swiper-slide">Slide 3</div>
-              <div class="swiper-slide">Slide 4</div>
-              <div class="swiper-slide">Slide 5</div>
+    </div>
+    <section class="hero">
+      <!-- Slider main container -->
+      <div class="swiper swiper-container" data-component="Carousel">
+        <!-- Additional required wrapper -->
+        <div class="swiper-wrapper">
+          <!-- Slides -->
+          <div class="swiper-slide">
+            <h2>Animation multimédia</h2>
+            <h2 class="project__title">Robot à Montréal</h2>
+            <a href="project1.html" class="button__small">En savoir plus</a>
+            <div class="hero__bgi">
+              <img
+                src="images/projet2-cover.jpg"
+                alt="Couverture du deuxième projet"
+              />
             </div>
-            <!-- If we need pagination -->
-            <div class="swiper-pagination"></div>
-
-            <!-- If we need navigation buttons -->
-            <div class="swiper-button-prev"></div>
-            <div class="swiper-button-next"></div>
           </div>
+          <div class="swiper-slide">Slide 2</div>
+          <div class="swiper-slide">Slide 3</div>
+          <div class="swiper-slide">Slide 4</div>
+          <div class="swiper-slide">Slide 5</div>
         </div>
-      </section>
+        <!-- If we need pagination -->
+        <div class="swiper-pagination pagination-buttons"></div>
 
+        <!-- If we need navigation buttons -->
+        <div class="swiper-button-prev navigation-buttons"></div>
+        <div class="swiper-button-next navigation-buttons"></div>
+      </div>
+    </section>
+    <div class="site-container">
       <footer>
         <div class="wrapper footer__style">
           <span class="line"></span>
