--- a/src/about.html
+++ b/src/about.html
@@ -63,11 +63,12 @@
               </h1>
               <h2>Intégratice multimédia</h2>
               <p>
-                Maecenas commodo vestibulum ullamcorper. Etiam vitae commodo
-                justo. Nam at accumsan metus. Duis sit amet odio felis.
-                Pellentesque pharetra interdum congue. Maecenas quis ligula sit
-                amet justo molestie efficitur. Curabitur aliquet odio sed sapien
-                tempor iaculis. Sed congue tincidunt orci nec vulputate.
+                Passionnée par l'univers des jeux vidéo et de l'art numérique,
+                j'étudie au programme Techniques d'intégration multimédia pour
+                en faire ma carrière. De la programmation web au design, je suis
+                heureuse de prêter main forte! Ma persévérance est ce qui me
+                pousse à relever des défis chaque jour pour offrir le meilleur
+                de mes compétences.
               </p>
             </div>
           </div>
@@ -183,10 +184,15 @@
       <section class="references">
         <div class="wrapper references__content">
           <div class="buttons">
-            <a href="" class="button"
+            <a href="pdf/alanisbedard_cv.pdf" class="button" download
+              >Télécharger mon CV</a
+            >
+            <a
+              href="pdf/alanisbedard_recommandation.pdf"
+              class="button"
+              download
               >Télécharger ma lettre de recommendation</a
             >
-            <a href="" class="button">Télécharger mon CV</a>
           </div>
           <span class="line"></span>
         </div>
@@ -195,6 +201,15 @@
       <section class="presentation">
         <div class="wrapper">
           <h3>Vidéo de présentation</h3>
+          <iframe
+            width="100%"
+            height="700px"
+            src="https://www.youtube-nocookie.com/embed/bibMXgY5duE"
+            title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen
+          ></iframe>
         </div>
       </section>
 
