Ajuster le carrousel et le footer de la page des projets.

--- a/src/projects.html
+++ b/src/projects.html
@@ -45,7 +45,7 @@
         </div>
       </header>
     </div>
-    <section class="hero">
+    <section class="projects__hero">
       <!-- Slider main container -->
       <div class="swiper swiper-container" data-component="Carousel">
         <!-- Additional required wrapper -->
@@ -62,10 +62,50 @@
               />
             </div>
           </div>
-          <div class="swiper-slide">Slide 2</div>
-          <div class="swiper-slide">Slide 3</div>
-          <div class="swiper-slide">Slide 4</div>
-          <div class="swiper-slide">Slide 5</div>
+          <div class="swiper-slide">
+            <h2>Animation multimédia</h2>
+            <h2 class="project__title">Robot à Montréal</h2>
+            <a href="project2.html" class="button__small">En savoir plus</a>
+            <div class="hero__bgi">
+              <img
+                src="images/projet2-cover.jpg"
+                alt="Couverture du deuxième projet"
+              />
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <h2>Animation multimédia</h2>
+            <h2 class="project__title">Robot à Montréal</h2>
+            <a href="project3.html" class="button__small">En savoir plus</a>
+            <div class="hero__bgi">
+              <img
+                src="images/projet2-cover.jpg"
+                alt="Couverture du deuxième projet"
+              />
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <h2>Animation multimédia</h2>
+            <h2 class="project__title">Robot à Montréal</h2>
+            <a href="project4.html" class="button__small">En savoir plus</a>
+            <div class="hero__bgi">
+              <img
+                src="images/projet2-cover.jpg"
+                alt="Couverture du deuxième projet"
+              />
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <h2>Animation multimédia</h2>
+            <h2 class="project__title">Robot à Montréal</h2>
+            <a href="project5.html" class="button__small">En savoir plus</a>
+            <div class="hero__bgi">
+              <img
+                src="images/projet2-cover.jpg"
+                alt="Couverture du deuxième projet"
+              />
+            </div>
+          </div>
         </div>
         <!-- If we need pagination -->
         <div class="swiper-pagination pagination-buttons"></div>
@@ -74,11 +114,8 @@
         <div class="swiper-button-prev navigation-buttons"></div>
         <div class="swiper-button-next navigation-buttons"></div>
       </div>
-    </section>
-    <div class="site-container">
       <footer>
-        <div class="wrapper footer__style">
-          <span class="line"></span>
+        <div class="wrapper footer__style_projects">
           <ul class="socials">
             <li>
               <a
@@ -137,6 +174,6 @@
           </ul>
         </div>
       </footer>
-    </div>
+    </section>
   </body>
 </html>
