--- a/src/about.html
+++ b/src/about.html
@@ -19,11 +19,12 @@
       href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"
     />
     <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
+    <script type="module" src="js/Main.js" defer></script>
   </head>
 
   <body>
     <div class="site-container">
-      <header>
+      <header class="header" data-component="Header" data-header="scrollLimit">
         <div class="wrapper_nav header__style">
           <a href="index.html" class="brand"
             ><img src="svg/logo.svg" alt="Logo Alanis Bédard"
@@ -201,7 +202,7 @@
       <section class="presentation">
         <div class="wrapper">
           <h3>Vidéo de présentation</h3>
-          <iframe
+          <!--<iframe
             width="100%"
             height="700px"
             src="https://www.youtube-nocookie.com/embed/bibMXgY5duE"
@@ -209,7 +210,7 @@
             frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
             allowfullscreen
-          ></iframe>
+          ></iframe>-->
         </div>
       </section>
 
