--- a/src/project2.html
+++ b/src/project2.html
@@ -19,11 +19,12 @@
       href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"
     />
     <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
+    <script type="module" src="js/Main.js" defer></script>
   </head>
 
   <body>
     <div class="site-container">
-      <header>
+      <header class="header" data-component="Header" data-header="scrollLimit">
         <div class="wrapper_nav header__style">
           <a href="index.html" class="brand"
             ><img src="svg/logo.svg" alt="Logo Alanis Bédard"
