--- a/src/projects.html
+++ b/src/projects.html
@@ -24,7 +24,7 @@
 
   <body>
     <div class="site-container">
-      <header data-component="Header" data-header="autoHide">
+      <header class="header" data-component="Header" data-header="scrollLimit">
         <div class="wrapper_nav header__style">
           <a href="index.html" class="brand"
             ><img src="svg/logo.svg" alt="Logo Alanis Bédard"
