--- a/src/contact.html
+++ b/src/contact.html
@@ -32,9 +32,11 @@
 
           <nav>
             <ul class="nav_main">
-              <li><a href="index.html">Accueil</a></li>
-              <li><a href="about.html">À propos</a></li>
-              <li><a href="projects.html">Projets</a></li>
+              <div class="nav__animation">
+                <li><a href="index.html">Accueil</a></li>
+                <li><a href="about.html">À propos</a></li>
+                <li><a href="projects.html">Projets</a></li>
+              </div>
               <li>
                 <a href="contact.html"
                   ><img src="svg/letter.svg" alt="Logo de contact"
