--- a/src/contact.html
+++ b/src/contact.html
@@ -66,47 +66,184 @@
           </div>
 
           <div class="form">
-            <div class="input">
-              <label class="input__label" for="name">Nom</label>
-              <input
-                class="input__element"
-                type="text"
-                name="name"
-                id="name"
-                placeholder="Prénom Nom"
-                required
-              />
+            <form
+              class="gform pure-form pure-form-stacked"
+              method="post"
+              data-email="alanisbedardcontact@gmail.com"
+              action="https://script.google.com/macros/s/AKfycbx1xkgQoslUKqV6zRJoN5zQ6exeZK9V5G3rW1csY-MH-zeDu0ZJb8dZzIND9mSTEY0B/exec"
+            >
+              <div class="form-elements">
+                <div class="input">
+                  <label class="input__label" for="nom">Nom</label>
+                  <input
+                    class="input__element"
+                    type="text"
+                    name="nom"
+                    id="name"
+                    placeholder="Prénom Nom"
+                    required
+                  />
+                </div>
+                <div class="input">
+                  <label class="input__label" for="email"
+                    >Adresse courriel</label
+                  >
+                  <input
+                    class="input__element"
+                    type="email"
+                    name="email"
+                    id="email"
+                    placeholder="exemple@courriel.com"
+                    required
+                  />
+                </div>
 
-              <p class="texte-erreur">Veillez écrire votre nom</p>
-            </div>
-            <div class="input">
-              <label class="input__label" for="email">Adresse courriel</label>
-              <input
-                class="input__element"
-                type="email"
-                name="email"
-                id="email"
-                placeholder="exemple@courriel.com"
-                required
-              />
+                <div class="input textarea u-grid-fullwidth">
+                  <label class="input__label" for="message">Message</label>
+                  <textarea
+                    class="input__element input_textarea"
+                    name="message"
+                    maxlength="500"
+                    id="comment"
+                    placeholder=" "
+                  ></textarea>
+                </div>
+                <button class="button reset-style_button">Soumettre</button>
+              </div>
 
-              <p class="texte-erreur">
-                Veillez bien écrire votre adresse courriel
-              </p>
-            </div>
-
-            <div class="input textarea u-grid-fullwidth">
-              <label class="input__label" for="comment">Message</label>
-              <textarea
-                class="input__element input_textarea"
-                name="comment"
-                maxlength="500"
-                id="comment"
-                placeholder=" "
-              ></textarea>
-              <p class="texte-erreur">Veillez écrire votre message</p>
-            </div>
+              <!-- Textes de confirmation -->
+              <div class="form_confirmation">
+                <h3>Merci de m'avoir contactée!</h3>
+                <p>Je vous répondrai dans les plus courts délais.</p>
+              </div>
+            </form>
           </div>
+
+          <script data-cfasync="false" type="text/javascript">
+            (function () {
+              function validEmail(email) {
+                var re =
+                  /^([\w-]+(?:\.[\w-]+)*)@((?:[\w-]+\.)*\w[\w-]{0,66})\.([a-z]{2,6}(?:\.[a-z]{2})?)$/i;
+                return re.test(email);
+              }
+
+              function validateHuman(honeypot) {
+                if (honeypot) {
+                  console.log("Robot Detected!");
+                  return true;
+                } else {
+                  console.log("Welcome Human!");
+                }
+              }
+              function getFormData(form) {
+                var elements = form.elements;
+
+                var fields = Object.keys(elements)
+                  .filter(function (k) {
+                    return elements[k].name !== "honeypot";
+                  })
+                  .map(function (k) {
+                    if (elements[k].name !== undefined) {
+                      return elements[k].name;
+                    } else if (elements[k].length > 0) {
+                      return elements[k].item(0).name;
+                    }
+                  })
+                  .filter(function (item, pos, self) {
+                    return self.indexOf(item) == pos && item;
+                  });
+
+                var formData = {};
+                fields.forEach(function (name) {
+                  var element = elements[name];
+                  formData[name] = element.value;
+                  if (element.length) {
+                    var data = [];
+                    for (var i = 0; i < element.length; i++) {
+                      var item = element.item(i);
+                      if (item.checked || item.selected) {
+                        data.push(item.value);
+                      }
+                    }
+                    formData[name] = data.join(", ");
+                  }
+                });
+
+                // add form-specific values into the data
+                formData.formDataNameOrder = JSON.stringify(fields);
+                formData.formGoogleSheetName = form.dataset.sheet || "contact"; // default sheet name
+                formData.formGoogleSendEmail = form.dataset.email || ""; // no email by default
+
+                console.log(formData);
+                return formData;
+              }
+
+              function handleFormSubmit(event) {
+                event.preventDefault();
+                var form = event.target;
+                var data = getFormData(form);
+                if (data.email && !validEmail(data.email)) {
+                  var invalidEmail = form.querySelector(".email-invalid");
+                  if (invalidEmail) {
+                    invalidEmail.style.display = "block";
+                    return false;
+                  }
+                } else {
+                  disableAllButtons(form);
+                  var url = form.action;
+                  var xhr = new XMLHttpRequest();
+                  xhr.open("POST", url);
+                  xhr.setRequestHeader(
+                    "Content-Type",
+                    "application/x-www-form-urlencoded"
+                  );
+                  xhr.onreadystatechange = function () {
+                    console.log(xhr.status, xhr.statusText);
+                    console.log(xhr.responseText);
+                    var formElements = form.querySelector(".form-elements");
+                    if (formElements) {
+                      formElements.style.display = "none"; // hide form
+                    }
+                    var sendConfirmation =
+                      form.querySelector(".form_confirmation");
+                    if (sendConfirmation) {
+                      sendConfirmation.style.display = "block";
+                    }
+                    return;
+                  };
+                  var encoded = Object.keys(data)
+                    .map(function (k) {
+                      return (
+                        encodeURIComponent(k) +
+                        "=" +
+                        encodeURIComponent(data[k])
+                      );
+                    })
+                    .join("&");
+                  xhr.send(encoded);
+                }
+              }
+
+              function loaded() {
+                console.log(
+                  "Contact form submission handler loaded successfully."
+                );
+                var forms = document.querySelectorAll("form.gform");
+                for (var i = 0; i < forms.length; i++) {
+                  forms[i].addEventListener("submit", handleFormSubmit, false);
+                }
+              }
+              document.addEventListener("DOMContentLoaded", loaded, false);
+
+              function disableAllButtons(form) {
+                var buttons = form.querySelectorAll("button");
+                for (var i = 0; i < buttons.length; i++) {
+                  buttons[i].disabled = true;
+                }
+              }
+            })();
+          </script>
+          <!-- Script venant du tutoriel de PerfectCod sur Youtube : https://youtu.be/tqIUQyRCpBA -->
         </div>
       </section>
 
