Ajout d'un style pour la page contact et ajout des images de couverture des projets.

--- a/src/projects.html
+++ b/src/projects.html
@@ -54,13 +54,13 @@
         <div class="swiper-wrapper">
           <!-- Slides -->
           <div class="swiper-slide">
-            <h2>Animation multimédia</h2>
-            <h2 class="project__title">Robot à Montréal</h2>
+            <h2>Animation 3D</h2>
+            <h2 class="project__title">Mia dans l’autobus</h2>
             <a href="project1.html" class="button__small">En savoir plus</a>
             <div class="hero__bgi">
               <img
-                src="images/projet2-cover.jpg"
-                alt="Couverture du deuxième projet"
+                src="images/projet1-cover.jpg"
+                alt="Couverture du premier projet"
               />
             </div>
           </div>
@@ -76,35 +76,35 @@
             </div>
           </div>
           <div class="swiper-slide">
-            <h2>Animation multimédia</h2>
-            <h2 class="project__title">Robot à Montréal</h2>
+            <h2>Mouvement québécois de la qualité</h2>
+            <h2 class="project__title">Salon MPA</h2>
             <a href="project3.html" class="button__small">En savoir plus</a>
             <div class="hero__bgi">
               <img
-                src="images/projet2-cover.jpg"
-                alt="Couverture du deuxième projet"
+                src="images/projet3-cover.jpg"
+                alt="Couverture du troisième projet"
               />
             </div>
           </div>
           <div class="swiper-slide">
             <h2>Animation multimédia</h2>
-            <h2 class="project__title">Robot à Montréal</h2>
+            <h2 class="project__title">L’oasis</h2>
             <a href="project4.html" class="button__small">En savoir plus</a>
             <div class="hero__bgi">
               <img
-                src="images/projet2-cover.jpg"
-                alt="Couverture du deuxième projet"
+                src="images/projet4-cover.jpg"
+                alt="Couverture du quatrième projet"
               />
             </div>
           </div>
           <div class="swiper-slide">
-            <h2>Animation multimédia</h2>
-            <h2 class="project__title">Robot à Montréal</h2>
+            <h2>Montage vidéo</h2>
+            <h2 class="project__title">Lumifest</h2>
             <a href="project5.html" class="button__small">En savoir plus</a>
             <div class="hero__bgi">
               <img
-                src="images/projet2-cover.jpg"
-                alt="Couverture du deuxième projet"
+                src="images/projet5-cover.jpg"
+                alt="Couverture du cinquième projet"
               />
             </div>
           </div>
