Ajouter l'HTML nécessaire pour une page de projet, et ajouter certaines images.

--- a/src/about.html
+++ b/src/about.html
@@ -144,10 +144,7 @@
     </div>
 
     <section class="about_medias">
-      <img
-        src="images/about-projects.png"
-        alt="Montage photo de ceratins projet d'Alanis Bédard"
-      />
+      <div class="about__display"></div>
       <p class="about_qualites">
         Persévérance Créativité Minutie Patience Persévérance Créativité Minutie
         Patience
