--- a/src/project1.html
+++ b/src/project1.html
@@ -47,6 +47,138 @@
         </div>
       </header>
 
+      <section class="project__hero">
+        <h2>Animation 3D</h2>
+        <h2 class="project__title">Mia dans l’autobus</h2>
+        <div class="hero__bgi">
+          <img
+            src="images/projet1-cover.jpg"
+            alt="Couverture du premier projet"
+          />
+        </div>
+      </section>
+
+      <div class="button__back">
+        <a href="#top" onclick="backToProjects();"></a>
+      </div>
+      <script>
+        function toPage() {
+          window.location = "projects.html#slide1";
+        }
+        function backToProjects() {
+          //redirect after 3 seconds for i min pass 60000
+          setTimeout("toPage()", 1000);
+        }
+      </script>
+      <!-- Code du Timer trouvé sur tutorialsplane.com et adapté selon les besoins : https://www.tutorialsplane.com/jquery-redirect-page-seconds-button-click/ -->
+
+      <section class="project__description">
+        <div class="wrapper">
+          <h3>Description</h3>
+          <p>
+            Maecenas commodo vestibulum ullamcorper. Etiam vitae commodo justo.
+            Nam at accumsan metus. Duis sit amet odio felis. Pellentesque
+            pharetra interdum congue. Maecenas quis ligula sit amet justo
+            molestie efficitur. Curabitur aliquet odio sed sapien tempor
+            iaculis. Sed congue tincidunt orci nec vulputate.
+          </p>
+          <div class="gallery">
+            <img
+              src="images/projet1-description1.png"
+              alt="Croquis du personnage principal"
+              class="large__img"
+            />
+            <div class="split__gallery">
+              <img
+                src="images/projet1-description2.png"
+                alt="Tenu d'été du personnage principal"
+                class="small__img"
+              />
+              <img
+                src="images/projet1-description3.png"
+                alt="Tenu d'automne du personnage principal"
+                class="small__img"
+              />
+              <img
+                src="images/projet1-description4.png"
+                alt="Tenu d'hiver du personnage principal"
+                class="small__img"
+              />
+            </div>
+          </div>
+        </div>
+      </section>
+    </div>
+
+    <div class="gallery__display"></div>
+
+    <div class="site-container">
+      <section class="project__skills">
+        <div class="wrapper">
+          <img src="" alt="" />
+          <div class="skills_infos">
+            <h3>Compétences</h3>
+            <p>
+              Maecenas commodo vestibulum ullamcorper. Etiam vitae commodo
+              justo. Nam at accumsan metus. Duis sit amet odio felis.
+              Pellentesque pharetra interdum congue. Maecenas quis ligula sit
+              amet justo molestie efficitur. Curabitur aliquet odio sed sapien
+              tempor iaculis. Sed congue tincidunt orci nec vulputate.
+            </p>
+            <h3>Logiciels</h3>
+            <ul>
+              <li>
+                <a href="https://www.blender.org/" target="_blank"
+                  ><img
+                    src="svg/software-blender.svg"
+                    alt="Logo du logiciel Blender"
+                /></a>
+              </li>
+              <li>
+                <a href="https://procreate.art/" target="_blank"
+                  ><img
+                    src="svg/software-procreate.svg"
+                    alt="Logo du logiciel Procreate"
+                /></a>
+              </li>
+              <li>
+                <a
+                  href="https://www.adobe.com/ca_fr/products/photoshop.html"
+                  target="_blank"
+                  ><img
+                    src="svg/software-photoshop.svg"
+                    alt="Logo du logiciel Photoshop"
+                /></a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </section>
+
+      <section class="project__final">
+        <div class="wrapper">
+          <iframe
+            width="560"
+            height="315"
+            src="https://www.youtube.com/embed/W3Mt_KUi2LE"
+            title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen
+          ></iframe>
+        </div>
+      </section>
+
+      <section class="credits">
+        <div class="wrapper">
+          <h3>Crédits</h3>
+          <p>
+            Alanis Bédard | Cinématographie, modélisation, textures et
+            animations
+          </p>
+        </div>
+      </section>
+
       <footer>
         <div class="wrapper footer__style">
           <span class="line"></span>
