--- a/src/projects.html
+++ b/src/projects.html
@@ -53,7 +53,7 @@
         <!-- Additional required wrapper -->
         <div class="swiper-wrapper">
           <!-- Slides -->
-          <div class="swiper-slide">
+          <div class="swiper-slide" id="slide1">
             <h2>Animation 3D</h2>
             <h2 class="project__title">Mia dans l’autobus</h2>
             <a href="project1.html" class="button__small">En savoir plus</a>
@@ -64,7 +64,7 @@
               />
             </div>
           </div>
-          <div class="swiper-slide">
+          <div class="swiper-slide" id="slide2">
             <h2>Animation multimédia</h2>
             <h2 class="project__title">Robot à Montréal</h2>
             <a href="project2.html" class="button__small">En savoir plus</a>
@@ -75,7 +75,7 @@
               />
             </div>
           </div>
-          <div class="swiper-slide">
+          <div class="swiper-slide" id="slide3">
             <h2>Mouvement québécois de la qualité</h2>
             <h2 class="project__title">Salon MPA</h2>
             <a href="project3.html" class="button__small">En savoir plus</a>
@@ -86,7 +86,7 @@
               />
             </div>
           </div>
-          <div class="swiper-slide">
+          <div class="swiper-slide" id="slide4">
             <h2>Animation multimédia</h2>
             <h2 class="project__title">L’oasis</h2>
             <a href="project4.html" class="button__small">En savoir plus</a>
@@ -97,7 +97,7 @@
               />
             </div>
           </div>
-          <div class="swiper-slide">
+          <div class="swiper-slide" id="slide5">
             <h2>Montage vidéo</h2>
             <h2 class="project__title">Lumifest</h2>
             <a href="project5.html" class="button__small">En savoir plus</a>
