Modifier la page d'un projet avec le HTML et CSS.

--- a/src/project1.html
+++ b/src/project1.html
@@ -88,23 +88,21 @@
               alt="Croquis du personnage principal"
               class="large__img"
             />
-            <div class="split__gallery">
-              <img
-                src="images/projet1-description2.png"
-                alt="Tenu d'été du personnage principal"
-                class="small__img"
-              />
-              <img
-                src="images/projet1-description3.png"
-                alt="Tenu d'automne du personnage principal"
-                class="small__img"
-              />
-              <img
-                src="images/projet1-description4.png"
-                alt="Tenu d'hiver du personnage principal"
-                class="small__img"
-              />
-            </div>
+            <img
+              src="images/projet1-description2.png"
+              alt="Tenu d'été du personnage principal"
+              class="small__img"
+            />
+            <img
+              src="images/projet1-description3.png"
+              alt="Tenu d'automne du personnage principal"
+              class="small__img"
+            />
+            <img
+              src="images/projet1-description4.png"
+              alt="Tenu d'hiver du personnage principal"
+              class="small__img"
+            />
           </div>
         </div>
       </section>
@@ -114,8 +112,8 @@
 
     <div class="site-container">
       <section class="project__skills">
-        <div class="wrapper">
-          <img src="" alt="" />
+        <div class="wrapper skills_medias">
+          <img src="images/projet1-skills.jpg" alt="Image du projet Blender" />
           <div class="skills_infos">
             <h3>Compétences</h3>
             <p>
@@ -125,50 +123,50 @@
               amet justo molestie efficitur. Curabitur aliquet odio sed sapien
               tempor iaculis. Sed congue tincidunt orci nec vulputate.
             </p>
-            <h3>Logiciels</h3>
-            <ul>
-              <li>
-                <a href="https://www.blender.org/" target="_blank"
-                  ><img
-                    src="svg/software-blender.svg"
-                    alt="Logo du logiciel Blender"
-                /></a>
-              </li>
-              <li>
-                <a href="https://procreate.art/" target="_blank"
-                  ><img
-                    src="svg/software-procreate.svg"
-                    alt="Logo du logiciel Procreate"
-                /></a>
-              </li>
-              <li>
-                <a
-                  href="https://www.adobe.com/ca_fr/products/photoshop.html"
-                  target="_blank"
-                  ><img
-                    src="svg/software-photoshop.svg"
-                    alt="Logo du logiciel Photoshop"
-                /></a>
-              </li>
-            </ul>
+            <div class="softwares skills_softwares">
+              <h3>Logiciels</h3>
+              <ul class="">
+                <li>
+                  <a href="https://www.blender.org/" target="_blank"
+                    ><img
+                      src="svg/software-blender.svg"
+                      alt="Logo du logiciel Blender"
+                  /></a>
+                </li>
+                <li>
+                  <a href="https://procreate.art/" target="_blank"
+                    ><img
+                      src="svg/software-procreate.svg"
+                      alt="Logo du logiciel Procreate"
+                  /></a>
+                </li>
+                <li>
+                  <a
+                    href="https://www.adobe.com/ca_fr/products/photoshop.html"
+                    target="_blank"
+                    ><img
+                      src="svg/software-photoshop.svg"
+                      alt="Logo du logiciel Photoshop"
+                  /></a>
+                </li>
+              </ul>
+            </div>
           </div>
         </div>
       </section>
+    </div>
 
-      <section class="project__final">
-        <div class="wrapper">
-          <iframe
-            width="560"
-            height="315"
-            src="https://www.youtube.com/embed/W3Mt_KUi2LE"
-            title="YouTube video player"
-            frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen
-          ></iframe>
-        </div>
-      </section>
+    <section class="project__final">
+      <iframe
+        src="https://www.youtube.com/embed/W3Mt_KUi2LE"
+        title="YouTube video player"
+        frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen
+      ></iframe>
+    </section>
 
+    <div class="site-container">
       <section class="credits">
         <div class="wrapper">
           <h3>Crédits</h3>
