Ajout de l'animation des qualités dans la page À propos.

--- a/src/about.html
+++ b/src/about.html
@@ -142,12 +142,12 @@
         </div>
       </section>
     </div>
-
+    <div class="about__display"></div>
     <section class="about_medias">
-      <div class="about__display"></div>
       <p class="about_qualites">
         Persévérance Créativité Minutie Patience Persévérance Créativité Minutie
-        Patience
+        Patience Persévérance Créativité Minutie Patience Persévérance
+        Créativité Minutie Patience Persévérance Créativité Minutie Patience
       </p>
     </section>
 
