Ajuster l'HTML et le css pour permettre à l'accueil d'être responsive.

--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
   </head>
 
   <body>
-    <div class="site-container">
+    <div class="site-container-index">
       <header class="header" data-component="Header" data-header="scrollLimit">
         <div class="wrapper_nav header__style">
           <a href="index.html" class="brand"
@@ -48,7 +48,7 @@
       </header>
 
       <section class="hero">
-        <div class="wrapper_nav content_index">
+        <div class="wrapper_demo content_index">
           <video
             class="demo_reel"
             src="videos/test-demo-reel.mp4"
