Ajouter les codes HTML et CSS permettant à la page d'un projet d'agir de façon responsive.

--- a/src/project1.html
+++ b/src/project1.html
@@ -49,7 +49,7 @@
 
       <section class="project__hero">
         <h2>Animation 3D</h2>
-        <h2 class="project__title">Mia dans l’autobus</h2>
+        <h1 class="project__title">Mia dans l’autobus</h1>
         <div class="hero__bgi">
           <img
             src="images/projet1-cover.jpg"
@@ -108,7 +108,7 @@
       </section>
     </div>
 
-    <div class="gallery__display"></div>
+    <div class="gallery__display display__project1"></div>
 
     <div class="site-container">
       <section class="project__skills">
