--- a/about.html
+++ b/about.html
@@ -136,6 +136,7 @@
             <ul class="list_dot">
               <li>HTML</li>
               <li>CSS</li>
+              <li>JavaScript</li>
               <li>PHP</li>
             </ul>
           </div>
