Ajout de la page 404 et modifier le contenu des pages de projet.

--- a/contact.html
+++ b/contact.html
@@ -52,11 +52,10 @@
           <div class="contact_infos">
             <h1>Contact</h1>
             <p>
-              Maecenas commodo vestibulum ullamcorper. Etiam vitae commodo
-              justo. Nam at accumsan metus. Duis sit amet odio felis.
-              Pellentesque pharetra interdum congue. Maecenas quis ligula sit
-              amet justo molestie efficitur. Curabitur aliquet odio sed sapien
-              tempor iaculis. Sed congue tincidunt orci nec vulputate.
+              Voulez-vous discuter? Écrivez-moi un message via le formulaire de
+              cette page. Il est aussi possible de communiquer avec moi par
+              courriel professionnel ou par téléphone. Je vous répondrai dans
+              les plus brefs délais.
             </p>
             <p>Téléphone : <a href="tel:579-883-9990">(579) 883-9990</a></p>
             <p>
