--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <div class="wrapper_demo content_index">
           <video
             class="demo_reel"
-            src="videos/test-demo-reel.mp4"
+            src="videos/demo-reel.mp4"
             loop="loop"
             autoplay="autoplay"
             muted
