--- a/project1.html
+++ b/project1.html
@@ -77,11 +77,10 @@
         <div class="wrapper">
           <h3>Description</h3>
           <p>
-            Maecenas commodo vestibulum ullamcorper. Etiam vitae commodo justo.
-            Nam at accumsan metus. Duis sit amet odio felis. Pellentesque
-            pharetra interdum congue. Maecenas quis ligula sit amet justo
-            molestie efficitur. Curabitur aliquet odio sed sapien tempor
-            iaculis. Sed congue tincidunt orci nec vulputate.
+            Mia dans l’autobus est mon projet final du cours d’animation 3D. Je
+            devais créer une courte animation 3D scénarisée. J’ai dessiné,
+            modélisé et animé le personnage principal de cette vidéo, ainsi que
+            tout le décor l’entourant.
           </p>
           <div class="gallery">
             <img
@@ -118,15 +117,17 @@
           <div class="skills_infos">
             <h3>Compétences</h3>
             <p>
-              Maecenas commodo vestibulum ullamcorper. Etiam vitae commodo
-              justo. Nam at accumsan metus. Duis sit amet odio felis.
-              Pellentesque pharetra interdum congue. Maecenas quis ligula sit
-              amet justo molestie efficitur. Curabitur aliquet odio sed sapien
-              tempor iaculis. Sed congue tincidunt orci nec vulputate.
+              Ce projet m’a amené à explorer les armatures et l’animation de
+              celle-ci. Le squelette manipule de façon organique le modèle de
+              mon personnage principal, et de simples objets vides contrôlent le
+              mouvement des yeux. Les pupilles et les sourcils bougent grâce à
+              des <span style="white-space: nowrap">« Shape Keys ».</span> Ce
+              fut l’une de mes premières animations 3D et j’en ai beaucoup
+              appris.
             </p>
             <div class="softwares skills_softwares">
               <h3>Logiciels</h3>
-              <ul class="">
+              <ul>
                 <li>
                   <a href="https://www.blender.org/" target="_blank"
                     ><img
