--- a/project3.html
+++ b/project3.html
@@ -77,11 +77,11 @@
         <div class="wrapper">
           <h3>Description</h3>
           <p>
-            Maecenas commodo vestibulum ullamcorper. Etiam vitae commodo justo.
-            Nam at accumsan metus. Duis sit amet odio felis. Pellentesque
-            pharetra interdum congue. Maecenas quis ligula sit amet justo
-            molestie efficitur. Curabitur aliquet odio sed sapien tempor
-            iaculis. Sed congue tincidunt orci nec vulputate.
+            Lors de mon stage d’été 2022 au Mouvement québécois de la qualité,
+            j’ai eu l'occasion de créer l’introduction de la 30ième édition du
+            Salon MPA. J’ai eu la chance d’avoir carte blanche lors de ce
+            projet, me permettant d’expérimenter avec d’autres types
+            d’animations 3D.
           </p>
           <div class="gallery">
             <img
@@ -117,15 +117,15 @@
           <div class="skills_infos">
             <h3>Compétences</h3>
             <p>
-              Maecenas commodo vestibulum ullamcorper. Etiam vitae commodo
-              justo. Nam at accumsan metus. Duis sit amet odio felis.
-              Pellentesque pharetra interdum congue. Maecenas quis ligula sit
-              amet justo molestie efficitur. Curabitur aliquet odio sed sapien
-              tempor iaculis. Sed congue tincidunt orci nec vulputate.
+              Devant recréer le logo du Salon MPA, j’ai placé aux endroits
+              stratégiques des lumières de tous types. J’ai aussi animé le
+              mouvement de caméra passant au travers des rubans bougeant le long
+              des courbes voulues. Les matériaux que j’ai créés devaient réagir
+              à l’environnement de façon similaire à de vrais rubans.
             </p>
             <div class="softwares skills_softwares">
               <h3>Logiciels</h3>
-              <ul class="">
+              <ul>
                 <li>
                   <a href="https://www.blender.org/" target="_blank"
                     ><img
@@ -151,7 +151,9 @@
 
     <section class="project__final">
       <iframe
-        src="https://www.youtube.com/embed/W3Mt_KUi2LE"
+        width="560"
+        height="315"
+        src="https://www.youtube-nocookie.com/embed/sflCpfYE-cY"
         title="YouTube video player"
         frameborder="0"
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
