--- a/project5.html
+++ b/project5.html
@@ -77,11 +77,11 @@
         <div class="wrapper">
           <h3>Description</h3>
           <p>
-            Maecenas commodo vestibulum ullamcorper. Etiam vitae commodo justo.
-            Nam at accumsan metus. Duis sit amet odio felis. Pellentesque
-            pharetra interdum congue. Maecenas quis ligula sit amet justo
-            molestie efficitur. Curabitur aliquet odio sed sapien tempor
-            iaculis. Sed congue tincidunt orci nec vulputate.
+            Ce projet fait dans le cadre de mon cours de montage vidéo devait
+            être animé ou monté au rythme d’une musique de notre choix. Ces
+            vidéos étaient, par la suite, envoyées aux organisateurs du Lumifest
+            2022. Mon animation fut choisie pour être projetée lors de cet
+            événement.
           </p>
           <div class="gallery">
             <img
@@ -117,36 +117,22 @@
           <div class="skills_infos">
             <h3>Compétences</h3>
             <p>
-              Maecenas commodo vestibulum ullamcorper. Etiam vitae commodo
-              justo. Nam at accumsan metus. Duis sit amet odio felis.
-              Pellentesque pharetra interdum congue. Maecenas quis ligula sit
-              amet justo molestie efficitur. Curabitur aliquet odio sed sapien
-              tempor iaculis. Sed congue tincidunt orci nec vulputate.
+              La création de cette animation m’a fait découvrir plusieurs
+              méthodes de travail intéressantes sur After Effects. Les calques
+              d’effets furent une belle découverte, permettant d’ajouter du
+              style aisément à nos compositions. Faire l’animation des bulles
+              dynamiques était aussi très amusant et formatif.
             </p>
             <div class="softwares skills_softwares">
               <h3>Logiciels</h3>
-              <ul class="">
-                <li>
-                  <a href="https://www.blender.org/" target="_blank"
-                    ><img
-                      src="svg/software-blender.svg"
-                      alt="Logo du logiciel Blender"
-                  /></a>
-                </li>
-                <li>
-                  <a href="https://procreate.art/" target="_blank"
-                    ><img
-                      src="svg/software-procreate.svg"
-                      alt="Logo du logiciel Procreate"
-                  /></a>
-                </li>
+              <ul>
                 <li>
                   <a
-                    href="https://www.adobe.com/ca_fr/products/photoshop.html"
+                    href="https://www.adobe.com/ca_fr/products/aftereffects.html"
                     target="_blank"
                     ><img
-                      src="svg/software-photoshop.svg"
-                      alt="Logo du logiciel Photoshop"
+                      src="svg/software-aftereffect.svg"
+                      alt="Logo du logiciel After Effects"
                   /></a>
                 </li>
               </ul>
@@ -158,7 +144,9 @@
 
     <section class="project__final">
       <iframe
-        src="https://www.youtube.com/embed/W3Mt_KUi2LE"
+        width="560"
+        height="315"
+        src="https://www.youtube-nocookie.com/embed/5rJ92sN98Lk"
         title="YouTube video player"
         frameborder="0"
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
@@ -170,10 +158,7 @@
       <section class="credits">
         <div class="wrapper">
           <h3>Crédits</h3>
-          <p>
-            Alanis Bédard | Cinématographie, modélisation, textures et
-            animations
-          </p>
+          <p>Alanis Bédard | Animation et création du visuel</p>
         </div>
       </section>
 
