--- a/project2.html
+++ b/project2.html
@@ -77,11 +77,11 @@
         <div class="wrapper">
           <h3>Description</h3>
           <p>
-            Maecenas commodo vestibulum ullamcorper. Etiam vitae commodo justo.
-            Nam at accumsan metus. Duis sit amet odio felis. Pellentesque
-            pharetra interdum congue. Maecenas quis ligula sit amet justo
-            molestie efficitur. Curabitur aliquet odio sed sapien tempor
-            iaculis. Sed congue tincidunt orci nec vulputate.
+            Robot à Montréal est une animation mélangeant une scène
+            photographiée et la modélisation 3D. Ce projet met en scène un robot
+            destructeur circulant dans un paysage urbain. L’ambiance audio
+            devait être montée de toutes pièces avec l’aide de sons disponibles
+            sur le web.
           </p>
           <div class="gallery">
             <img
@@ -117,15 +117,16 @@
           <div class="skills_infos">
             <h3>Compétences</h3>
             <p>
-              Maecenas commodo vestibulum ullamcorper. Etiam vitae commodo
-              justo. Nam at accumsan metus. Duis sit amet odio felis.
-              Pellentesque pharetra interdum congue. Maecenas quis ligula sit
-              amet justo molestie efficitur. Curabitur aliquet odio sed sapien
-              tempor iaculis. Sed congue tincidunt orci nec vulputate.
+              Lors de ce projet, j’ai pu découvrir et expérimenter avec des
+              banques de textures disponibles sur le web. J’ai ensuite pu
+              modifier ces textures de métal en y ajoutant des dessins et
+              graffitis avec l’aide de Photoshop. J’ai aussi dû être créative
+              pour produire une scène 3D simulant l’environnement réaliste de la
+              photo.
             </p>
             <div class="softwares skills_softwares">
               <h3>Logiciels</h3>
-              <ul class="">
+              <ul>
                 <li>
                   <a href="https://www.blender.org/" target="_blank"
                     ><img
@@ -158,7 +159,7 @@
 
     <section class="project__final">
       <iframe
-        src="https://www.youtube.com/embed/W3Mt_KUi2LE"
+        src="https://www.youtube-nocookie.com/embed/bibMXgY5duE"
         title="YouTube video player"
         frameborder="0"
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
@@ -174,6 +175,18 @@
             Alanis Bédard | Cinématographie, modélisation, textures et
             animations
           </p>
+          <p>
+            Textures réalistes trouvé sur ambientCG |
+            <a href="https://ambientcg.com/">https://ambientcg.com/</a>
+          </p>
+          <p>
+            Vidéo par Cottonbro trouvé sur Pexels |
+            <a
+              href="https://www.pexels.com/video/creepy-clown-extreme-close-up-5427406/"
+              >https://www.pexels.com/video/creepy-clown-extreme-close-up-5427406/</a
+            >
+          </p>
+          <p>Photo de Montréal par François R. Arsenault</p>
         </div>
       </section>
 
