--- a/project4.html
+++ b/project4.html
@@ -77,11 +77,11 @@
         <div class="wrapper">
           <h3>Description</h3>
           <p>
-            Maecenas commodo vestibulum ullamcorper. Etiam vitae commodo justo.
-            Nam at accumsan metus. Duis sit amet odio felis. Pellentesque
-            pharetra interdum congue. Maecenas quis ligula sit amet justo
-            molestie efficitur. Curabitur aliquet odio sed sapien tempor
-            iaculis. Sed congue tincidunt orci nec vulputate.
+            Ce projet fut une belle entrée en matière dans le monde du
+            scénarimage. En utilisant de multiples modélisations créées par des
+            artistes 3D, j’ai pu mettre en scène ma vision. Mon but étant de
+            créer un scénario simple pouvant être interprété de différentes
+            façons, tout en ayant un visuel agréable.
           </p>
           <div class="gallery">
             <img
@@ -117,27 +117,22 @@
           <div class="skills_infos">
             <h3>Compétences</h3>
             <p>
-              Maecenas commodo vestibulum ullamcorper. Etiam vitae commodo
-              justo. Nam at accumsan metus. Duis sit amet odio felis.
-              Pellentesque pharetra interdum congue. Maecenas quis ligula sit
-              amet justo molestie efficitur. Curabitur aliquet odio sed sapien
-              tempor iaculis. Sed congue tincidunt orci nec vulputate.
+              Avec l’aide de Mixamo, j’ai pu découvrir l’animation non-linéaire
+              sur Blender. Avec cet outil, il est facile de créer des
+              transitions simples entre des animations enregistrées, ce qui
+              facilite la tâche de scénarisation. J’ai aussi eu le plaisir
+              d’animer et d'alterner entre plusieurs caméras selon des chemins
+              prédéterminés. J’ai aussi appris beaucoup sur l'éditeur Shader
+              après la création de plusieurs matériaux comme l’eau de l’Oasis.
             </p>
             <div class="softwares skills_softwares">
               <h3>Logiciels</h3>
-              <ul class="">
+              <ul>
                 <li>
                   <a href="https://www.blender.org/" target="_blank"
                     ><img
                       src="svg/software-blender.svg"
                       alt="Logo du logiciel Blender"
-                  /></a>
-                </li>
-                <li>
-                  <a href="https://procreate.art/" target="_blank"
-                    ><img
-                      src="svg/software-procreate.svg"
-                      alt="Logo du logiciel Procreate"
                   /></a>
                 </li>
                 <li>
@@ -158,7 +153,7 @@
 
     <section class="project__final">
       <iframe
-        src="https://www.youtube.com/embed/W3Mt_KUi2LE"
+        src="https://www.youtube-nocookie.com/embed/lpHiz5E6Txg"
         title="YouTube video player"
         frameborder="0"
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
@@ -171,8 +166,28 @@
         <div class="wrapper">
           <h3>Crédits</h3>
           <p>
-            Alanis Bédard | Cinématographie, modélisation, textures et
+            Alanis Bédard | Cinématographie, modélisation du sable, textures et
             animations
+          </p>
+          <p>
+            jakobscheidt | Gameready Character,
+            <a href="https://skfb.ly/6SEwJ">https://skfb.ly/6SEwJ</a>
+          </p>
+          <p>
+            jakobscheidt | Winter Girl,
+            <a href="https://skfb.ly/6XZ9M">https://skfb.ly/6XZ9M</a>
+          </p>
+          <p>
+            Máté Varga | The Carrier,
+            <a href="https://skfb.ly/oroD7">https://skfb.ly/oroD7 </a>
+          </p>
+          <p>
+            Erroratten | Desert - Rocks - Stones - Pack,
+            <a href="https://skfb.ly/op9zQ">https://skfb.ly/op9zQ</a>
+          </p>
+          <p>
+            Parelaxel | Stylized Palm tree set,
+            <a href="https://skfb.ly/6Y98A">https://skfb.ly/6Y98A</a>
           </p>
         </div>
       </section>
