Modifier la page 404 personnalisée.

--- a/404.html
+++ b/404.html
@@ -25,7 +25,7 @@
   </head>
 
   <body>
-    <div class="site-container-index">
+    <div class="site-container">
       <header class="header" data-component="Header" data-header="scrollLimit">
         <div class="wrapper_nav header__style">
           <a href="index.html" class="brand"
@@ -50,7 +50,7 @@
       </header>
 
       <section class="hero">
-        <div class="wrapper_demo content_index">
+        <div class="wrapper_demo not-found">
           <h1>Cette page n'existe pas.</h1>
 
           <p>
