Correction de certains textes et ajout d'une animation de survol.

--- a/about.html
+++ b/about.html
@@ -84,7 +84,7 @@
       <section class="knowledge">
         <div class="wrapper knowledge__content">
           <div class="skills">
-            <h3>Compétenses</h3>
+            <h3>Compétences</h3>
             <ul class="list_dot">
               <li>Animation 2D et 3D</li>
               <li>Modélisation</li>
@@ -134,7 +134,7 @@
             </ul>
           </div>
           <div class="languages">
-            <h3>Languages informatiques</h3>
+            <h3>Langages informatiques</h3>
             <ul class="list_dot">
               <li>HTML</li>
               <li>CSS</li>
@@ -194,7 +194,7 @@
               href="pdf/alanisbedard_recommandation.pdf"
               class="button"
               download
-              >Télécharger ma lettre de recommendation</a
+              >Télécharger ma lettre de recommandation</a
             >
           </div>
           <span class="line"></span>
