--- a/project5.html
+++ b/project5.html
@@ -161,6 +161,7 @@
         <div class="wrapper">
           <h3>Crédits</h3>
           <p>Alanis Bédard | Animation et création du visuel</p>
+          <p>Komiku | Musique : Hélice's Theme, 2019</p>
         </div>
       </section>
 
